maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:20: error: not found: value somAng
  if (somAng == 0){
      ^